Installed native dependecies to generate graphs

--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "paths-js": "^0.4.7",
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "react-native": "0.57.4",
+    "react-native-calendar-heatmap": "^0.1.2",
+    "react-native-svg": "^8.0.8"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
