--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-calendar-heatmap": "^0.1.2",
+    "react-native-chart-kit": "^1.2.1",
     "react-native-svg": "^8.0.8"
   },
   "devDependencies": {
